========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2017-03-19

  - Fixed minor bug with CSV importer that would occur when the file has no
    valid columns.


2017-01-26

  - (internal) Moved the implementation of booking methods to its own
    beancount.parser.booking_methods module.

  - (internal) Split up the booking methods to functions for exhaustive testing
    and allowing others to implement new methods more easily if desired.


2017-01-22

  - Added new price source fetcher from OANDA's API. It supports a large number
    of currency pairs with tickers like this "XXX_YYY", such as "EUR_USD". Use
    it like the other price sources, e.g., like this:

      bean-price -e 'USD:oanda/EUR_USD'

  - Began working on the conversion of Google Docs to reStructuredText for
    inclusion in Dominik Aumayr's docs.


2017-01-21

  - Fixed #155: Use entry_points instead of scripts in setup.py.

  - Added an extra check for Balance directives, verifying that asserted
    currencies are accepted currencies for that account (if the account's
    corresponding currencies have been declared explicitly). In other words,
    this will now fail instead of being silently ignored:

      2017-01-21 open Assets:Checking    CAD
      2017-01-21 balance Assets:Checking  0.00 USD

  - Fixed bug in sheets_upload.py / upload-to-sheets whereby all the fields of a
    sheet being updated just in order to resize it was causing the sheet to be
    reindexed at the front of the list of sheets.

  - Merged 'arithmetic_ops' branch with no effect, in order to move all files
    and release. This will have to be revisited later.


2017-01-19

  - Fixed bug with generation of column names in sheets uploader script.


2017-01-16

  - Removed tools/gauth (used to be beancount.docs.gauth). All users of this are
    slightly different, and they're utility scripts. Unfactoring.
